# hkgr

./: .stack-all  .travis.yml  CHANGELOG.md  Main.hs  Makefile  README.md  TODO  hckgtool.cabal  hkgr.cabal  hkgrelease.cabal  stack-lts.yaml  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts20.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: build.yml
data/: template.cabal.tmpl
src/: Main.hs
