cabal-version:       2.0
name:                hkgr
version:             0.2.4
synopsis:            Simple Hackage release workflow for package maintainers
description:
            Hkgr (pronouced "Hackager") is a tool to help make new releases of
            Haskell packages, with commands for git tagging, pristine sdist,
            and uploading to Hackage.
homepage:            https://github.com/juhp/hkgr
bug-reports:         https://github.com/juhp/hkgr/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Util
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2,
                     GHC == 8.0.2

source-repository head
  type:                git
  location:            https://github.com/juhp/hkgr.git

executable hkgr
  main-is:             Main.hs
  other-modules:       Paths_hkgr
  autogen-modules:     Paths_hkgr

  build-depends:       base < 5,
                       directory >= 1.3.1.0,
                       filepath,
                       simple-cabal,
                       simple-cmd >= 0.2.0,
                       simple-cmd-args
  if impl(ghc<8.0)
      build-depends: semigroups

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
