cabal-version:       2.0
name:                hkgr
version:             0.4.4
synopsis:            Simple Hackage release workflow for package maintainers
description:
            Hkgr (Hackager) is a tool to help make new releases of
            Haskell packages, with commands for git tagging, pristine sdist,
            and uploading to Hackage.
            There is also a command for creating a new local project.
homepage:            https://github.com/juhp/hkgr
bug-reports:         https://github.com/juhp/hkgr/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2019-2024  Jens Petersen
category:            Util
build-type:          Simple
data-dir:            data
data-files:          template.cabal.tmpl
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.6 || == 9.4 || == 9.2 || == 9.0 || == 8.10
                     || == 8.8 || == 8.6 || == 8.4 || == 8.2 || == 8.0

source-repository head
  type:                git
  location:            https://github.com/juhp/hkgr.git

executable hkgr
  main-is:             src/Main.hs
  other-modules:       Paths_hkgr
  autogen-modules:     Paths_hkgr

  build-depends:       base < 5
                     , bytestring
                     , directory >= 1.3.1.0
                     , extra
                     , filepath
                     , simple-cabal >= 0.1.0
                     , simple-cmd
                     , simple-cmd-args >= 0.1.6
                     , simple-prompt >= 0.2
                     , typed-process
                     , xdg-basedir

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
